<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.MineFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/myself"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.28"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@mipmap/mine_head_bg" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="1.0">

            <LinearLayout
                android:layout_width="84dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:textAlignment="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="10dp"
                    android:textColor="#FFFFFF"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/defalut_value" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_F96B6B"
                    android:textSize="12sp"
                    android:gravity="center"
                    android:text="@string/msg_dyn" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="84dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textAlignment="center"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginBottom="10dp"
                    android:textColor="#FFFFFF"
                    android:text="@string/defalut_value" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:textColor="@color/color_F96B6B"
                    android:textSize="12sp"
                    android:layout_height="wrap_content"
                    android:text="@string/fans" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="84dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textAlignment="center"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginBottom="10dp"
                    android:textColor="#FFFFFF"
                    android:text="@string/defalut_value" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_F96B6B"
                    android:textSize="12sp"
                    android:text="@string/day_7_visited" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintHeight_percent="0.55"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2">



            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="85dp"
                android:layout_height="75dp"
                android:layout_marginTop="25dp"
                android:layout_marginStart="30dp"
                android:src="@mipmap/my_avater" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="107dp"
                android:layout_height="45dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="40dp"
                android:gravity="center"
                android:text="@string/defalut_name"
                android:textAlignment="textStart"
                android:textSize="20sp"
                android:textColor="#FFFFFF" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="34dp"
                android:layout_height="64dp"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_chevron_right_black_24dp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/v1"
        app:layout_constraintTop_toBottomOf="@+id/myself"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <LinearLayout
        android:id="@+id/lf"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/v1">

        <TextView
            android:id="@+id/textView15"
            android:layout_marginLeft="50dp"
            android:layout_width="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_height="match_parent"
            android:textSize="12sp"
            android:layout_marginTop="7dp"
            android:drawableTop="@mipmap/my_collect"
            android:gravity="center"
            android:layout_weight="1"
            android:textColor="#000000"
            android:text="@string/my_collect" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_height="match_parent"
            android:drawableTop="@mipmap/my_history"
            android:layout_marginTop="7dp"
            android:gravity="center"
            android:textSize="12sp"
            android:layout_marginRight="30dp"
            android:layout_weight="1"
            android:textColor="#000000"
            android:text="@string/my_histroy" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_marginLeft="30dp"
            android:gravity="center"
            android:layout_marginTop="7dp"
            android:layout_height="match_parent"
            android:drawableTop="@mipmap/night_mode"
            android:textSize="12sp"
            android:layout_marginRight="30dp"
            android:textColor="#000000"
            android:layout_weight="1"
            android:text="@string/dark_mode" />
    </LinearLayout>

    <View
        android:id="@+id/v2"
        app:layout_constraintTop_toBottomOf="@+id/lf"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/color_F3F5F4"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/v2">

        <LinearLayout
            android:id="@+id/msg_notice"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/msg_notice"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="#000000"
                android:layout_marginLeft="10dp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@mipmap/setting_arrow"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="300dp"
                android:layout_gravity="right"/>
        </LinearLayout>
        <View
            android:id="@+id/v3"
            app:layout_constraintTop_toBottomOf="@+id/msg_notice"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/color_F3F5F4"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/tt_mail"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="#000000"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/tt_mail_msg"
                android:gravity="center"
                android:layout_marginLeft="125dp"
                android:layout_marginRight="10dp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@mipmap/setting_arrow"
                android:layout_marginRight="5dp"
                android:layout_gravity="right"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:background="@color/color_E6E8E7"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/jd_mail"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="#000000"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="新人领188元红包"
                android:gravity="center"
                android:layout_marginLeft="125dp"
                android:layout_marginRight="10dp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@mipmap/setting_arrow"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="55dp"
                android:layout_gravity="right"/>
        </LinearLayout>
        <View
            android:id="@+id/v4"
            app:layout_constraintTop_toBottomOf="@+id/lf"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/color_F3F5F4"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/my_baoliao"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="#000000"
                android:layout_marginLeft="10dp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@mipmap/setting_arrow"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="300dp"
                android:layout_gravity="right"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:background="@color/color_E6E8E7"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/user_feedback"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="#000000"
                android:layout_marginLeft="10dp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@mipmap/setting_arrow"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="300dp"
                android:layout_gravity="right"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:background="@color/color_E6E8E7"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/system_setting"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="#000000"
                android:layout_marginLeft="10dp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@mipmap/setting_arrow"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="300dp"
                android:layout_gravity="right"/>
        </LinearLayout>
        <View
            android:id="@+id/v5"
            app:layout_constraintTop_toBottomOf="@+id/lf"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/color_F3F5F4"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>